--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<header>
 								<h1>INK BITS</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>Here you can find all the animated sprites!</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -222,7 +222,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
