--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title"></span>
+									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">INK BITS</span>
 								</a>
 
 							<!-- Nav -->
