--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Llaveros.html">Keychains</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="Pegatinas.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
@@ -65,8 +65,8 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="Pegatinas.html">
+										<h2>Pegatinas</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
