--- a/eevee.html
+++ b/eevee.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Secuencia PNG Animada - Dos personajes</title>
+    <title>AR Eevee y Pikachu Animados</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    
     <!-- MindAR y A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
@@ -19,13 +19,14 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: A/Eevee/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;" 
+        mindar-image="imageTargetSrc: A.llaveros/targets.mind; filterMinCF: 0.05; filterBeta: 5;"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true"
       >
+
         <a-assets>
           <!-- Frames de Eevee -->
           <img id="eevee0" src="A.llaveros/Eevee/Eevee-1.png" crossorigin="anonymous" />
@@ -36,19 +37,17 @@
           <img id="eevee5" src="A.llaveros/Eevee/Eevee-6.png" crossorigin="anonymous" />
           <img id="eevee6" src="A.llaveros/Eevee/Eevee-7.png" crossorigin="anonymous" />
 
-          <!-- Frames de Pikachu -->
+          <!-- Frames de Pikachu (menos frames, por ejemplo 5) -->
           <img id="pikachu0" src="A.llaveros/Pikachu/Pikachu-1.png" crossorigin="anonymous" />
           <img id="pikachu1" src="A.llaveros/Pikachu/Pikachu-2.png" crossorigin="anonymous" />
           <img id="pikachu2" src="A.llaveros/Pikachu/Pikachu-3.png" crossorigin="anonymous" />
           <img id="pikachu3" src="A.llaveros/Pikachu/Pikachu-4.png" crossorigin="anonymous" />
           <img id="pikachu4" src="A.llaveros/Pikachu/Pikachu-5.png" crossorigin="anonymous" />
-          <img id="pikachu5" src="A.llaveros/Pikachu/Pikachu-6.png" crossorigin="anonymous" />
-          <img id="pikachu6" src="A.llaveros/Pikachu/Pikachu-7.png" crossorigin="anonymous" />
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <!-- Animación de Eevee (targetIndex: 0) -->
+        <!-- Target de Eevee -->
         <a-entity mindar-image-target="targetIndex: 0">
           <a-image
             id="eevee-image"
@@ -56,11 +55,11 @@
             position="0 0 0"
             width="1"
             height="1"
-            frame-animation="frames: eevee"
+            frame-animation="frames: eevee0,eevee1,eevee2,eevee3,eevee4,eevee5,eevee6"
           ></a-image>
         </a-entity>
 
-        <!-- Animación de Pikachu (targetIndex: 1) -->
+        <!-- Target de Pikachu -->
         <a-entity mindar-image-target="targetIndex: 1">
           <a-image
             id="pikachu-image"
@@ -68,29 +67,29 @@
             position="0 0 0"
             width="1"
             height="1"
-            frame-animation="frames: pikachu"
+            frame-animation="frames: pikachu0,pikachu1,pikachu2,pikachu3,pikachu4"
           ></a-image>
         </a-entity>
 
-        <!-- Componente de animación reutilizable -->
+        <!-- Componente que reproduce frames con control total -->
         <script>
           AFRAME.registerComponent('frame-animation', {
             schema: { frames: { type: 'string' } },
             init: function () {
               const image = this.el;
-              const name = this.data.frames;
-              const frames = Array.from({ length: 7 }, (_, i) => `#${name}${i}`);
+              const frameIds = this.data.frames.split(',').map(id => `#${id}`);
               let current = 0;
               this.interval = setInterval(() => {
-                image.setAttribute('src', frames[current]);
-                current = (current + 1) % frames.length;
-              }, 150); // Más lento que antes
+                image.setAttribute('src', frameIds[current]);
+                current = (current + 1) % frameIds.length;
+              }, 150); // Animación más suave
             },
             remove: function () {
               clearInterval(this.interval);
             }
           });
         </script>
+
       </a-scene>
     </div>
   </body>
